--- a/FieldEdgeCodeChallenge/ClientApp/src/app/customer/edit-customer/edit-customer.component.html
+++ b/FieldEdgeCodeChallenge/ClientApp/src/app/customer/edit-customer/edit-customer.component.html
@@ -1,4 +1,4 @@
-<div class="edit-customer-container">
+<!-- <div class="edit-customer-container">
   <h2>Edit Customer</h2>
   <form [formGroup]="editForm" (ngSubmit)="saveChanges()">
     <div class="form-group">
@@ -34,4 +34,4 @@
     <button type="button" class="btn btn-secondary" [ngStyle]="{ 'margin-left.px': 10 }" (click)="cancelEdit()">Cancel</button>
     </div>
   </form>
-</div>
+</div> -->
